--- a/plugins/CoreAdminHome/lang/it.json
+++ b/plugins/CoreAdminHome/lang/it.json
@@ -103,7 +103,7 @@
         "ValidPiwikHostname": "Nome Host Matomo Valido",
         "WithOptionalRevenue": "con entrate opzionali",
         "YouAreOptedOut": "Al momento non hai accettato il programma.",
-        "YouAreNotOptedOut": "Non sei stato escluso.",
+        "YouAreNotOptedOut": "Al momento non sei escluso dal programma.",
         "YouMayOptOut": "Puoi scegliere di non avere un cookie univoco di identificazione per web analytics assegnato al tuo computer al fine di evitare l'aggregazione e l'analisi dei dati raccolti su questo sito web.",
         "YouMayOptOutBis": "Per fare questa scelta, clicca qui di seguito per ricevere un cookie di opt-out.",
         "OptingYouOut": "Sto acquisendo la tua rinuncia, attendi...",
@@ -112,7 +112,7 @@
         "YouMayOptOut2": "Puoi scegliere di impedire a questo sito web di aggregare e analizzare le azioni che intraprendi qui.",
         "YouMayOptOut3": "Ciò proteggerà la tua privacy, ma impedirà al proprietario di imparare dalle tue azioni e di creare un'esperienza migliore per te e per gli altri utenti.",
         "UncheckToOptOut": "Togli la spunta a questa casella per escluderti (opt-out).",
-        "CheckToOptIn": "Spunta questa casella per abilitarti (opt-in).",
+        "CheckToOptIn": "Metti la spunta a questa casella per abilitarti (opt-in).",
         "OptOutErrorNoCookies": "La funzione per l'opt-out dal monitoraggio richiede che siano abilitati i cookies.",
         "OptOutErrorNotHttps": "La funzione di rinuncia al monitoraggio (opt-out) potrebbe non funzionare perché questo sito non è stato caricato su HTTPS. Ricarica la pagina per verificare se il tuo stato di rinuncia è cambiato.",
         "OptOutErrorWindowOpen": "La funzione di esclusione dal monitoraggio (opt-out) potrebbe non funzionare perché sembra che il popup di disattivazione sia stato bloccato. Ricarica la pagina per verificare se il tuo stato di rinuncia è cambiato.",
