--- a/plugins/Diagnostics/lang/it.json
+++ b/plugins/Diagnostics/lang/it.json
@@ -9,6 +9,9 @@
         "HideUnchanged": "Se vuoi vedere soltanto i valori cambiati, puoi %1$snascondere tutti quelli che non sono cambiati%2$s.",
         "Sections": "Sezioni",
         "DatabaseReaderConnection": "Connessione al Lettore del Database",
+        "DatabaseUtf8Requirement": "Ciò è richiesto per conservare i caratteri UTF8 a 4-byte. Se il charset utf8mb4 non è disponibile, caratteri speciali come le emoji, i caratteri meno comuni delle lingue asiatiche, vari glifi antichi o i simboli matematici verranno sostituiti con %1$s. Puoi leggere più dettagli su questo argomento in %2$squeste FAQ%3$s.",
+        "DatabaseUtf8mb4CharsetRecommended": "Il tuo database non supporta ancora il charset UTF8mb4.",
+        "DatabaseUtf8mb4CharsetAvailableButNotUsed": "Il tuo database supporta il charset utf8mb4, ma le tabelle del tuo database non sono ancora state convertite. Puoi farlo eseguendo il comando %1$s o attivando la conversione automatica nelle Impostazioni Generali.",
         "CronArchivingLastRunCheck": "Ultima Archiviazione Completata con Successo",
         "CronArchivingHasNotRun": "L'archiviazione non è ancora stata eseguita con successo.",
         "CronArchivingHasNotRunInAWhile": "L'ultima archiviazione è stata eseguita con successo il %1$s, cioè %2$s fa.",
