--- a/plugins/Ecommerce/lang/el.json
+++ b/plugins/Ecommerce/lang/el.json
@@ -5,6 +5,10 @@
         "Order": "Παραγγελία",
         "OrderId": "Αναγνωριστικό παραγγελίας",
         "Orders": "Παραγγελίες",
+        "ViewedProductCategory": "Κατηγορία Προϊόντος που είδατε",
+        "ViewedProductName": "Όνομα Προϊόντος που είδατε",
+        "ViewedProductPrice": "Τιμή Προϊόντος που είδατε",
+        "ViewedProductSKU": "Προϊόν SKU που είδατε",
         "SalesBy": "Πωλήσεις ανά %s",
         "SalesAdjective": "Πωλήσεις %s",
         "NumberOfItems": "Αριθμός αντικειμένων στο καλάθι",
