--- a/plugins/Ecommerce/lang/it.json
+++ b/plugins/Ecommerce/lang/it.json
@@ -5,6 +5,10 @@
         "Order": "Ordine",
         "OrderId": "ID Ordine",
         "Orders": "Ordini",
+        "ViewedProductCategory": "Categoria Prodotto Visualizzato",
+        "ViewedProductName": "Nome Prodotto Visualizzato",
+        "ViewedProductPrice": "Prezzo Prodotto Visualizzato",
+        "ViewedProductSKU": "Codice SKU Prodotto Visualizzato",
         "SalesBy": "Vendite per %s",
         "SalesAdjective": "Vendite %s",
         "NumberOfItems": "Numero di articoli nel Carrello",
