--- a/plugins/Ecommerce/lang/sq.json
+++ b/plugins/Ecommerce/lang/sq.json
@@ -5,6 +5,10 @@
         "Order": "Porosi",
         "OrderId": "ID Porosie",
         "Orders": "Porosi",
+        "ViewedProductCategory": "Kategori Produkti të Parë",
+        "ViewedProductName": "Emër Produkti të Parë",
+        "ViewedProductPrice": "Çmim Produkti të Parë",
+        "ViewedProductSKU": "SKU Produkti të Parë",
         "SalesBy": "Shitje nga %s",
         "SalesAdjective": "Shitje %s",
         "NumberOfItems": "Numër Artikujsh në Shportë",
