--- a/plugins/Ecommerce/lang/tr.json
+++ b/plugins/Ecommerce/lang/tr.json
@@ -5,6 +5,10 @@
         "Order": "Sipariş",
         "OrderId": "Sipariş Kodu",
         "Orders": "Sipariş",
+        "ViewedProductCategory": "Görüntülenen Ürün Kategorisi",
+        "ViewedProductName": "Görüntülenen Ürün Adı",
+        "ViewedProductPrice": "Görüntülenen Ürün Fiyatı",
+        "ViewedProductSKU": "Görüntülenen Ürün SKU Kodu",
         "SalesBy": "%s bazında satışlar",
         "SalesAdjective": "Satışlar %s",
         "NumberOfItems": "Sepetteki Öge Sayısı",
