--- a/plugins/MultiSites/lang/fr.json
+++ b/plugins/MultiSites/lang/fr.json
@@ -2,7 +2,7 @@
     "MultiSites": {
         "Evolution": "Évolution",
         "LoadingWebsites": "Chargement des sites",
-        "PluginDescription": "Visualisez et comparez tous vos sites web et application en utilisant le tableau de bord \"tous les sites web\".",
+        "PluginDescription": "Visualisez et comparez tous vos sites web et applications en utilisant le tableau de bord « tous les sites web ».",
         "TopLinkTooltip": "Comparez les statistiques pour tous vos sites web."
     }
 }
