--- a/plugins/SitesManager/lang/fr.json
+++ b/plugins/SitesManager/lang/fr.json
@@ -34,6 +34,10 @@
         "GlobalListExcludedUserAgents_Desc": "Si le user agent du visiteur contient n'importe laquelle des chaines de caractères que vous avez spécifiées, le visiteur sera exclu de Matomo.",
         "GlobalSettings": "Paramètrès généraux",
         "GlobalWebsitesSettings": "Paramètres généraux des sites web",
+        "InstallationGuides": "Guides d'installation",
+        "InstallationGuidesIntro": "Nous fournissons des guides étape par étape expliquant comment intégrer le code de suivi pour certains CMS populaires et constructeurs de sites web :",
+        "ExtraInformationNeeded": "Vous pouvez avoir besoin des informations suivantes pour configurer Matomo sur votre système :",
+        "Integrations": "Intégrations",
         "HelpExcludedIpAddresses": "Entrez la list d'adresses IP, une par ligne, que vous souhaitez exclure du suivi effectué par Matomo. Vous pouvez utiliser la notation CIDR ex %1$sou vous pouvez utiliser des caractères génériques ex %2$s ou %3$s",
         "JsTrackingTagHelp": "Ci-dessous le code JavaScript à inclure dans toutes vos pages",
         "KeepURLFragments": "Conserver les fragments d'URL",
