--- a/plugins/CoreHome/lang/nl.json
+++ b/plugins/CoreHome/lang/nl.json
@@ -15,6 +15,7 @@
         "DataTableIncludeAggregateRows": "Geagregeerde rijen zijn verborgen %s Toon ze",
         "DataTableHowToSearch": "Druk op enter of klik op het zoek icoon om te zoeken.",
         "DataTableShowDimensions": "Dimensies zijn gecombineerd %s Toon dimensies apart",
+        "DataTableCombineDimensions": "Dimensies worden afzonderlijk weergegeven %s Toon dimensies gecombineerd",
         "Default": "standaard",
         "DonateCall1": "Matomo zal altijd gratis zijn om te gebruiken, maar dat wil niet zeggen dat het niks kost om te maken.",
         "DonateCall2": "Matomo heeft uw voortdurende steun nodig om te groeien en te bloeien.",
@@ -56,6 +57,8 @@
         "ShortcutZenMode": "voor Zen mode",
         "ShortcutSegmentSelector": "om de Segment selector te openen",
         "ShortcutWebsiteSelector": "om de Website selector te openen",
+        "ShortcutCalendar": "kalender openen (d staat voor Datum)",
+        "ShortcutSearch": "zoekveld openen (f staat voor Find)",
         "ShortcutHelp": "om deze help te tonen",
         "ShowJSCode": "toon de javascript code",
         "SkipToContent": "Ga naar de inhoud",
@@ -70,6 +73,8 @@
         "ClickRowToExpandOrContract": "Klik deze regel om de tabel te openen of te sluiten.",
         "UndoPivotBySubtable": "Dit rapport wordt als een draaitabel getoond, %s schakel de draaitabel uit.",
         "NoSuchPage": "Deze pagina bestaat niet",
+        "PageUpShortcutDescription": "om bovenaan de pagina te komen",
+        "PageDownShortcutDescription": "om onderaan de pagina te komen",
         "PivotBySubtable": "Dit rapport wordt niet als een draaitabel getoond, %1$s maak een draaitabel op basis van %2$s",
         "SystemSummaryWidget": "Systeem samenvatting",
         "SystemSummaryNWebsites": "%d websites",
@@ -82,6 +87,8 @@
         "MenuEntries": "Menu-items",
         "Segments": "Segmenten",
         "OneClickUpdateNotPossibleAsMultiServerEnvironment": "De één-klik update is niet beschikbaar wanneer Matomo is geïnstalleerd over meerdere servers. Download de laatste versie van Matomo via %1$s om verder te gaan.",
+        "CssDidntLoad": "De browser kan de style van deze pagina niet laden.",
+        "JsDidntLoad": "De browser kan het script van deze website niet laden.",
         "AdblockIsMaybeUsed": "Als je gebruik maakt van een reclame blokker, schakel deze a.u.b. uit zodat je zeker weet dat Matomo werkt zonder problemen.",
         "ChangeCurrentWebsite": "Kies een website, huidig geselecteerde website: %s",
         "LeadingAnalyticsPlatformRespectsYourPrivacy": "Het leidende open analytics platform dat privacy respecteerd.",
@@ -89,6 +96,10 @@
         "MacPageDown": "Fn + Pijl naar rechts",
         "ReportType": "Rapport type",
         "RowLimit": "Rij limiet",
-        "ExportFormat": "Export formaat"
+        "ExportFormat": "Export formaat",
+        "StandardReport": "Standaard rapport",
+        "FlattenReport": "Rapport vlak maken",
+        "ReportWithMetadata": "Rapport met metadata",
+        "SeeAvailableVersions": "Zie Beschikbare Versies"
     }
 }
