--- a/plugins/VisitTime/lang/it.json
+++ b/plugins/VisitTime/lang/it.json
@@ -5,8 +5,19 @@
         "ColumnLocalMinute": "Ora locale - minuto (Inizio della visita)",
         "ColumnServerTime": "Ora del server",
         "ColumnServerHour": "Orario del server - ora",
+        "ColumnVisitEndServerHour": "Orario del server - ora (Orario dell'ultima azione)",
+        "ColumnVisitEndServerMinute": "Orario del server - minuto (Orario dell'ultima azione)",
         "ColumnVisitStartServerHour": "Orario del server - ora (Inizio della visita)",
         "ColumnVisitStartServerMinute": "Orario del server - minuto (Inizio della visita)",
+        "ColumnVisitEndServerDate": "Orario del server - data (Orario dell'ultima azione)",
+        "ColumnVisitEndServerDayOfMonth": "Orario del server - giorno del mese (Orario dell'ultima azione)",
+        "ColumnVisitEndServerDayOfWeek": "Orario del server - giorno della settimana (Orario dell'ultima azione)",
+        "ColumnVisitEndServerDayOfYear": "Orario del server - giorno dell'anno (Orario dell'ultima azione)",
+        "ColumnVisitEndServerQuarter": "Orario del server - quarto (Orario dell'ultima azione)",
+        "ColumnVisitEndServerSecond": "Orario del server - secondo (Orario dell'ultima azione)",
+        "ColumnVisitEndServerWeekOfYear": "Orario del server - settimana dell'anno (Orario dell'ultima azione)",
+        "ColumnVisitEndServerMonth": "Orario del server - mese (Orario dell'ultima azione)",
+        "ColumnVisitEndServerYear": "Orario del server - anno (Orario dell'ultima azione)",
         "ColumnServerMinute": "Orario del server - minuto",
         "DayOfWeek": "Giorno della settimana",
         "LocalTime": "Visite per ora locale",
